--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,5 @@
 language: cpp
-sudo: required
-dist: trusty
-
-os: linux
-
 script:
 - cmake -H. -B_builds
 - cmake --build _builds/
-./_builds/tests -s "[foo]"
+- ./_builds/tests
